--- a/index.html
+++ b/index.html
@@ -10,5 +10,30 @@
     <title>Welcome to The Couples Resort</title>
 </head>
 <body>
+    <h1 class="hidden">Welcome to The Couples Resort</h1>
+    <dic class="container">
+        <header id="main-header" class="grid">
+            <nav id="main-nav">
+                <h2 class="hidden">Main Navigation</h2>
+                <input type="checkbox" id="hamburger">
+                <lable for="hamburger">
+                    <image src="images/burger.svg" alt="hamburger menu icon">
+                </lable>
+                <div id="burger-con">
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="#">Rooms</a></li>
+                        <li><a href="#">Packages</a></li>
+                        <li><a href="#">Dining</a></li>
+                        <li><a href="#">Spa Activites</a></li>
+                        <li><a href="#">Reservations</a></li>
+                    </ul>
+                </div>
+            </nav>
+            <div id="logo">
+                <img src="images/couples_resort_logo.svg" alt="Couples Resort Logo">
+            </div>
+        </header>
+    </dic>
 </body>
 </html>
