--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 </head>
 <body>
     <h1 class="hidden">Welcome to The Couples Resort</h1>
-    <dic class="container">
+    <div class="container">
         <header id="main-header" class="grid">
             <nav id="main-nav">
                 <h2 class="hidden">Main Navigation</h2>
                 <input type="checkbox" id="hamburger">
-                <lable for="hamburger">
-                    <image src="images/burger.svg" alt="hamburger menu icon">
-                </lable>
+                <label for="hamburger">
+                    <img src="images/burger.svg" alt="hamburger menu icon">
+                </label>
                 <div id="burger-con">
                     <ul>
                         <li><a href="index.html">Home</a></li>
@@ -34,6 +34,47 @@
                 <img src="images/couples_resort_logo.svg" alt="Couples Resort Logo">
             </div>
         </header>
-    </dic>
+        <main>
+            <section id="main-hero" class="grid">
+                <img src="images/main-hero.jpg" alt="Couples Resort on lake">
+                <a href="#" class="book-now" id="book-now-top">
+                    <h3>Book Now</h3>
+                </a>
+                <h2 class="hero-img-h2"><span>Couples Resort</span><br> 5 Star Luxury Couples Resort &amp; Spa</h2>
+            </section>
+
+            <section id="hero-welcome" class="grid">
+                <h2 class="hidden">Welcome Information</h2>
+
+                <p>Welcome to Couples Resort, Soyers Lake.  Haliburton's Only 5 STAR Luxury Resort.  Fine Luxury while still being Rustic with Wilderness.  A Boutique Luxury Resort with Junior suite rooms and cottages that are each designed uniquely, just for the 2 of you, varying between Opulent Old European to Natural Hailburton Style.  Come and experience very spacious accommodations, each and all, with Jacuzzi's, Wood Burning Fireplaces, Hot Tubs and so much more.</p>
+
+                <p>"For over 50 years we have been committed to helping couples stay connected. 100% Canadian Owned, By the LeBlanc Family since 1958.</p>
+            </section>
+
+            <section id="hero-contact" class="grid">
+                <h2 class="hidden">Copules Resort Contact Information</h2>
+                <div id="contact-con" class="grid">
+                    <div>
+                        <i class="fas fa-mobile-alt"></i>
+                        <p id="hero-numbers">
+                            Toll free: <a href="tel:1-866-202-1179">1 866 202 1179</a><br>
+                            Fax: 1 613 673 2615
+                            info[at]couplesresort.com
+                        </p>
+
+                        <div>
+                            <i class=" fas fa-map-marker-alt"></i>
+                            <p id="hero-address">
+                                1198 Osprey Rd, (End of)<br>
+                                Minden, Soyers Lake, ON<br>
+                                K0M 2K0
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+        </main>
+    </div>
 </body>
 </html>
